fix: fix label group gap without id

--- a/src/pug/components/form/label/label.scss
+++ b/src/pug/components/form/label/label.scss
@@ -6,9 +6,8 @@
   text-align: left;
   text-transform: uppercase;
 
-  &_inline {
-    &:first-child {
-      margin-top: 5px;
-    }
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 5px 5px;
+ 
 }
